--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <option value="bitcoin/market-price-api/openapi.json">Bitcoin - Market Price API</option>
       <option value="bitcoin/mempool-monitoring-api/openapi.json">Bitcoin - Mempool Monitoring API</option>
       <option value="bitcoin/node-rpc-api/openapi.json">Bitcoin - Node RPC API</option>
+      <option value="bitcoin/wallet-api/openapi.json">Bitcoin - Wallet API</option>
 
       <!-- Cardano -->
       <option value="cardano/blockchain-indexer-api/openapi.json">Cardano - Blockchain Indexer API</option>
